--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@ East China Normal University
 
 <p style="font-size: 0.8rem;">
 My Google Scholar is: <a href="https://scholar.google.com.hk/citations?user=a5jkbmkAAAAJ&hl=zh-CN", target="_blank">Juncheng Li (李俊诚)</a></br>
+My Semantic Scholar is: <a href="https://www.semanticscholar.org/author/Juncheng-Li/1492115432", target="_blank">Juncheng Li</a></br>
 My Researchgate is: <a href="https://www.researchgate.net/profile/Juncheng_Li5/publications", target="_blank">Juncheng Li</a></br> 
+My ORCID: 0000-0001-7314-6754 </br> 
 Long-term co-authors: <a href="https://mkfmiku.github.io", target="_blank">Kangfu MEI</b></a>, <a href="https://scholar.google.com.hk/citations?user=2yyTgRwAAAAJ&hl=zh-CN", target="_blank">ZENG Tieyong</b></a>, <a href="https://scholar.google.com.hk/citations?user=ZO3KGykAAAAJ&hl=zh-CN", target="_blank">Aiwen Jiang</b></a>, <a href="https://scholar.google.com.hk/citations?user=y5bqy0AAAAAJ&hl=zh-CN", target="_blank">Qiaosi Yi</b></a></br>
 The students I supervised: Kangfu MEI, Qiaosi Yi, Jiaqian Li, Yang Liu, Qinyan Dai</a>
 </p>
@@ -33,7 +35,8 @@ Please contact me if you can provide this position.
 <section style="font-size: 0.6rem;">
 <h1 style="font-size: 1rem; font-weight: bold;">Biography</h1>
 <p style="font-size: 0.8rem;">
-I'm a Ph.D. student at the School of Computer Science and Technology, East China Normal University (ECNU), working with Prof. <b> <a href="https://scholar.google.com.hk/citations?user=dIfKlYgAAAAJ&hl=zh-CN", target="_blank"> Guixu Zhang</a></b> and Prof. <b><a href="https://scholar.google.com.hk/citations?user=TSkJe-4AAAAJ&hl=zh-CN", target="_blank">Faming Fang</a></b>. I will graduate in 2021.07.</br>
+I'm a Ph.D. student at the School of Computer Science and Technology, East China Normal University (ECNU), working with Prof. <b> <a href="https://scholar.google.com.hk/citations?user=dIfKlYgAAAAJ&hl=zh-CN", target="_blank"> Guixu Zhang</a></b> and Prof. <b><a href="https://scholar.google.com.hk/citations?user=TSkJe-4AAAAJ&hl=zh-CN", target="_blank">Faming Fang</a></b>.</br>
+I will graduate in 2021.07.</br>
 </p>
 </section>
 
@@ -230,7 +233,7 @@ I'm a Ph.D. student at the School of Computer Science and Technology, East China
         【SCI-1, IF=8.739】
         </br>
         <p style="margin: 0; padding-left: 1rem">Faming Fang, <u><b>Juncheng Li*</b></u>, Yiting Yuan, Tieyong Zeng, and Guixu Zhang</p>
-        <p style="margin: 0; padding-left: 1rem"><font color="red">Author names alphabetically, * First contributor.</font></p>
+        <p style="margin: 0; padding-left: 1rem"><font color="red">* First contributor. Author names alphabetically</font></p>
         <p style="margin: 0; padding-left: 1rem">East China Normal University, The Chinese University of Hong Kong</p>
         <i style="font-size: 0.6rem; padding-left: 1rem">IEEE Transactions on Neural Networks and Learning Systems (<font color="red"><b>TNNLS, Top Journal</b></font>).</i> </br>
         <i style="font-size: 0.6rem; padding-left: 1rem">This achievement was completed during the visit of the Chinese University of Hong Kong.</i> </br>
@@ -244,7 +247,7 @@ I'm a Ph.D. student at the School of Computer Science and Technology, East China
         【SCI-1, IF=9.340】
         </br>
         <p style="margin: 0; padding-left: 1rem">Faming Fang, <u><b>Juncheng Li*</b></u>, and Tieyong Zeng</p>
-        <p style="margin: 0; padding-left: 1rem"><font color="red">Author names alphabetically, * First contributor.</font></p>
+        <p style="margin: 0; padding-left: 1rem"><font color="red">* First contributor. Author names alphabetically</font></p>
         <p style="margin: 0; padding-left: 1rem">East China Normal University, The Chinese University of Hong Kong</p>
         <i style="font-size: 0.6rem; padding-left: 1rem">IEEE Transactions on Image Processing (<font color="red"><b>TIP, Top Journal</b></font>), 2020.</i> </br>
         <i style="font-size: 0.6rem; padding-left: 1rem">This achievement was completed during the visit of the Chinese University of Hong Kong.</i> </br>
