--- a/index.html
+++ b/index.html
@@ -11,11 +11,18 @@ East China Normal University
 </p>
 
 <p style="font-size: 0.8rem;">
-My Google Scholar is: <a href="https://scholar.google.com.hk/citations?user=a5jkbmkAAAAJ&hl=zh-CN", target="_blank">Juncheng Li (李俊诚)</a></br>
-My Semantic Scholar is: <a href="https://www.semanticscholar.org/author/Juncheng-Li/1492115432", target="_blank">Juncheng Li</a></br>
-My Researchgate is: <a href="https://www.researchgate.net/profile/Juncheng_Li5/publications", target="_blank">Juncheng Li</a></br> 
+My Google Scholar: <a href="https://scholar.google.com.hk/citations?user=a5jkbmkAAAAJ&hl=zh-CN", target="_blank">Juncheng Li (李俊诚)</a></br>
+My Semantic Scholar: <a href="https://www.semanticscholar.org/author/Juncheng-Li/1492115432", target="_blank">Juncheng Li</a></br>
+My Researchgate: <a href="https://www.researchgate.net/profile/Juncheng_Li5/publications", target="_blank">Juncheng Li</a></br> 
 My ORCID: 0000-0001-7314-6754 </br> 
-Long-term co-authors: <a href="https://mkfmiku.github.io", target="_blank">Kangfu MEI</b></a>, <a href="https://scholar.google.com.hk/citations?user=2yyTgRwAAAAJ&hl=zh-CN", target="_blank">ZENG Tieyong</b></a>, <a href="https://scholar.google.com.hk/citations?user=ZO3KGykAAAAJ&hl=zh-CN", target="_blank">Aiwen Jiang</b></a>, <a href="https://scholar.google.com.hk/citations?user=y5bqy0AAAAAJ&hl=zh-CN", target="_blank">Qiaosi Yi</b></a></br>
+</p>
+
+<p style="font-size: 0.8rem;"></p>
+Long-term co-authors: 
+<a href="https://mkfmiku.github.io", target="_blank">Kangfu MEI</b></a>, 
+<a href="https://scholar.google.com.hk/citations?user=2yyTgRwAAAAJ&hl=zh-CN", target="_blank">ZENG Tieyong</b></a>, 
+<a href="https://scholar.google.com.hk/citations?user=ZO3KGykAAAAJ&hl=zh-CN", target="_blank">Aiwen Jiang</b></a>, 
+<a href="https://scholar.google.com.hk/citations?user=y5bqy0AAAAAJ&hl=zh-CN", target="_blank">Qiaosi Yi</b></a></br>
 The students I supervised: Kangfu MEI, Qiaosi Yi, Jiaqian Li, Yang Liu, Qinyan Dai</a>
 </p>
 
@@ -29,8 +36,6 @@ Please contact me if you can provide this position.
 </p> -->
 
 <p></p>
-
-
 
 <section style="font-size: 0.6rem;">
 <h1 style="font-size: 1rem; font-weight: bold;">Biography</h1>
@@ -187,7 +192,7 @@ I will graduate in 2021.07.</br>
         [Code]
         </br>
         <p style="margin: 0; padding-left: 1rem">Qiaosi Yi#, <u><b>Juncheng Li#</b></u>, Aiwen Jiang, and Faming Fang</p>
-        <p style="margin: 0; padding-left: 1rem"><font color="red"># Joint first authors.</font></p>
+        <p style="margin: 0; padding-left: 1rem"><font color="red"># Joint first authors. My idea and implemented by junior student</font></p>
         <p style="margin: 0; padding-left: 1rem">East China Normal University, Jiangxi Normal University</p>
         <i style="font-size: 0.6rem; padding-left: 1rem">Under review, will coming soon!</i>
     </li>
@@ -220,7 +225,7 @@ I will graduate in 2021.07.</br>
         【SCI-1, IF=6.051】
         </br>
         <p style="margin: 0; padding-left: 1rem">Jiaqian Li#, <u><b>Juncheng Li#</b></u>, Faming Fang, Fang Li, and Guixu Zhang</p>
-        <p style="margin: 0; padding-left: 1rem"><font color="red">My idea and implemented by junior student, # Joint first authors.</font></p>
+        <p style="margin: 0; padding-left: 1rem"><font color="red"># Joint first authors. My idea and implemented by junior student</font></p>
         <p style="margin: 0; padding-left: 1rem">East China Normal University</p>
         <i style="font-size: 0.6rem; padding-left: 1rem">IEEE Transactions on Multimedia (<font color="red"><b>TMM, Top Journal</b></font>), 2020.</i> </br>
     </li>
