--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@ I will graduate in 2021.07.</br>
         <b>【6】 MDCN: Multi-scale Dense Cross Network for Image Super-Resolution </b> </br>
         <a href="paper/TCSVT_2020.pdf", target="_blank">[Paper]</a>
         <a href="https://github.com/MIVRC/MDCN-PyTorch", target="_blank">[Code]</a>
-        【SCI-2, IF=4.133】
+        <font color="blue">【SCI-2, IF=4.133】</font>
         </br>
         <p style="margin: 0; padding-left: 1rem"><u><b>Juncheng Li*</b></u>, Faming Fang, Jiaqian Li, Kangfu Mei, and Guixu Zhang</p>
         <p style="margin: 0; padding-left: 1rem">East China Normal University, The Chinese University of Hong Kong (Shenzhen)</p>
@@ -222,7 +222,7 @@ I will graduate in 2021.07.</br>
         <b>【5】 Luminance-aware Pyramid Network for Low-light Image Enhancement </b> </br>
         <a href="paper/TMM_2020.pdf", target="_blank">[Paper]</a>
         [Code]
-        【SCI-1, IF=6.051】
+        <font color="blue">【SCI-1, IF=6.051】</font>
         </br>
         <p style="margin: 0; padding-left: 1rem">Jiaqian Li#, <u><b>Juncheng Li#</b></u>, Faming Fang, Fang Li, and Guixu Zhang</p>
         <p style="margin: 0; padding-left: 1rem"><font color="red"># Joint first authors. My idea and implemented by junior student</font></p>
@@ -235,7 +235,7 @@ I will graduate in 2021.07.</br>
         <a href="https://junchenglee.com/projects/TNNLS2020_MLEFGN", target="_blank">[Homepage]</a>
         <a href="paper/TNNLS_2020.pdf", target="_blank">[Paper]</a>
         <a href="https://github.com/MIVRC/MLEFGN-PyTorch", target="_blank">[Code]</a>
-        【SCI-1, IF=8.739】
+        <font color="blue">【SCI-1, IF=8.739】</font>
         </br>
         <p style="margin: 0; padding-left: 1rem">Faming Fang, <u><b>Juncheng Li*</b></u>, Yiting Yuan, Tieyong Zeng, and Guixu Zhang</p>
         <p style="margin: 0; padding-left: 1rem"><font color="red">* First contributor. Author names alphabetically</font></p>
@@ -249,7 +249,7 @@ I will graduate in 2021.07.</br>
         <a href="https://junchenglee.com/projects/TIP2020_SEANET", target="_blank">[Homepage]</a>
         <a href="paper/TIP_2020.pdf", target="_blank">[Paper]</a>
         <a href="https://github.com/MIVRC/SeaNet-PyTorch", target="_blank">[Code]</a>
-        【SCI-1, IF=9.340】
+        <font color="blue">【SCI-1, IF=9.340】</font>
         </br>
         <p style="margin: 0; padding-left: 1rem">Faming Fang, <u><b>Juncheng Li*</b></u>, and Tieyong Zeng</p>
         <p style="margin: 0; padding-left: 1rem"><font color="red">* First contributor. Author names alphabetically</font></p>
@@ -318,7 +318,8 @@ I will graduate in 2021.07.</br>
     <li>
         <b>【6】Edge-guided Composition Network for Image Stitching </b> </br>
         [Paper]
-        [Code] 【SCI-1, IF=7.196】
+        [Code] 
+        <font color="blue">【SCI-1, IF=7.196】</font>
         </br>
         <p style="margin: 0; padding-left: 1rem">Qinyan Dai, Faming Fang, <u><b>Juncheng Li</b></u>, Guixu Zhang, and Aimin Zhou</p>
         <p style="margin: 0; padding-left: 1rem">East China Normal University</p>
@@ -327,7 +328,8 @@ I will graduate in 2021.07.</br>
     <li>
         <b>【5】Progressive Back-traced Dehazing Network based on Multi-resolution Recurrent Reconstruction</b> </br>
         <a href="paper/Access_2020.pdf", target="_blank">[Paper]</a>
-        [Code] 【SCI-2, IF=3.745】
+        [Code] 
+        <font color="blue">【SCI-2, IF=3.745】</font>
         </br>
         <p style="margin: 0; padding-left: 1rem">Qiaosi Yi, Aiwen Jiang, <u><b>Juncheng Li</b></u>, Jianyi Wan, and Mingwen Wang </p>
         <p style="margin: 0; padding-left: 1rem">Jiangxi Normal University, East China Normal University</p>
@@ -347,7 +349,7 @@ I will graduate in 2021.07.</br>
         <b>【3】Deep Residual Refining based Pseudo Multi-frame Network for Effective Single Image Super-Resolution</b> </br>
         <a href="paper/IET_2018.pdf", target="_blank">[Paper]</a>
         <a href="https://github.com/MKFMIKU/RPMNet", target="_blank">[Code]</a>
-        【SCI-3, IF=2.004】
+        <font color="blue"></font>【SCI-3, IF=2.004】
         </br>
         <p style="margin: 0; padding-left: 1rem">Kangfu Mei, Aiwen Jiang,<u><b>Juncheng Li</b></u>, Bo Liu, Jihua Ye, and Mingwen Wang</p>
         <p style="margin: 0; padding-left: 1rem">Jiangxi Normal University, East China Normal University</p>
