--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ My Researchgate: <a href="https://www.researchgate.net/profile/Juncheng_Li5/publ
 My ORCID: 0000-0001-7314-6754 </br> 
 </p>
 
-<p style="font-size: 0.8rem;"></p>
+<p style="font-size: 0.8rem;">
 Long-term co-authors: 
 <a href="https://mkfmiku.github.io", target="_blank">Kangfu MEI</b></a>, 
 <a href="https://scholar.google.com.hk/citations?user=2yyTgRwAAAAJ&hl=zh-CN", target="_blank">ZENG Tieyong</b></a>, 
@@ -349,7 +349,7 @@ I will graduate in 2021.07.</br>
         <b>【3】Deep Residual Refining based Pseudo Multi-frame Network for Effective Single Image Super-Resolution</b> </br>
         <a href="paper/IET_2018.pdf", target="_blank">[Paper]</a>
         <a href="https://github.com/MKFMIKU/RPMNet", target="_blank">[Code]</a>
-        <font color="blue"></font>【SCI-3, IF=2.004】
+        <font color="blue">【SCI-3, IF=2.004】</font>
         </br>
         <p style="margin: 0; padding-left: 1rem">Kangfu Mei, Aiwen Jiang,<u><b>Juncheng Li</b></u>, Bo Liu, Jihua Ye, and Mingwen Wang</p>
         <p style="margin: 0; padding-left: 1rem">Jiangxi Normal University, East China Normal University</p>
@@ -402,37 +402,37 @@ I will graduate in 2021.07.</br>
     <h1 style="font-size: 1rem; font-weight: bold;">Academic Service</h1>
     <h1 style="font-size: 0.8rem; font-weight: bold;">Journal Reviewer</h1>
     <li>
-        IEEE Transactions on Image Processing (TIP)
+        IEEE Transactions on Image Processing (TIP, SCI-1)
     </li>
     <li>
-        IEEE Transactions on Multimedia (TMM)
+        IEEE Transactions on Multimedia (TMM, SCI-1)
     </li>
     <li>
-        IEEE Transactions on Emerging Topics in Computational Intelligence (TETCI)
+        IEEE Access (SCI-2)
     </li>
     <li>
-        IEEE Access
+        IEEE Signal Processing Letters (SPL, SCI-3)
     </li>
     <li>
-        IEEE Signal Processing Letters (SPL)
+        IET Image Processing (SCI-3)
     </li>
     <li>
-        Signal Processing: Image Communication (SPIC)
+        IEEE Transactions on Emerging Topics in Computational Intelligence (TETCI, SCI-3)
     </li>
     <li>
-        IET Computer Vision
+        Signal Processing: Image Communication (SPIC, SCI-3)
     </li>
     <li>
-        IET Signal Processing
+        IET Computer Vision (SCI-4)
     </li>
     <li>
-        IET Image Processing
+        IET Signal Processing (SCI-4)
     </li>
     <li>
-        IET Electronics Letters
+        IET Electronics Letters (SCI-4)
     </li>
     <li>
-        ACM Transactions on Asian and Low-Resource Language Information Processing
+        ACM Transactions on Asian and Low-Resource Language Information Processing (SCI-4)
     </li>
     </br>
     <h1 style="font-size: 0.8rem; font-weight: bold;">Conference Reviewer</h1>
