--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ I will graduate in 2021.07.</br>
         We have 1 paper accepted to <a href="http://digital-library.theiet.org/content/journals/iet-ipr/e-first", target="_blank">IET Image Processing 2018</a>.
     </li>
     <li>
-        We have 1 paper accepted to <a href="http://accv2018.net/dates/", target="_blank">ACCV 2018</a>.
+        We have 1 paper accepted to <a href="http://accv2018.net/dates/", target="_blank">ACCV 2018 (SCI-3)</a>.
     </li>
     <li>
         We have 1 paper accepted to <a href="https://conference.cs.cityu.edu.hk/iconip/", target="_blank">ICONIP 2018</a>.
