--- a/index.html
+++ b/index.html
@@ -181,7 +181,8 @@ I will graduate in 2021.07.</br>
 
 <p style="margin: 0; padding-left: 1rem"><font color="red">Accepted: 6 (Journal) + 3 (Conference) + 2 (Workshop) + 2 (Report)</font></p>
 <p style="margin: 0; padding-left: 1rem"><font color="red">Under review: 4 (Journal) + 2 (Conference)</font></p>
-<p style="margin: 0; padding-left: 1rem"><font color="red">Total IF: 34.066 &nbsp; Total citations: 232 &nbsp; Highest citation paper: 127</font></p> 
+<p style="margin: 0; padding-left: 1rem"><font color="red">Total IF: 34.066 &nbsp; Total citations: 232 &nbsp; Highest citation paper: 127</font></p>
+<p style="margin: 0; padding-left: 1rem"><font color="red">* First contributor</font></p>  
 </br>
 
 <section style="font-size: 0.7rem;" class="publications">
@@ -238,7 +239,7 @@ I will graduate in 2021.07.</br>
         <font color="blue">【SCI-1, IF=8.739】</font>
         </br>
         <p style="margin: 0; padding-left: 1rem">Faming Fang, <u><b>Juncheng Li*</b></u>, Yiting Yuan, Tieyong Zeng, and Guixu Zhang</p>
-        <p style="margin: 0; padding-left: 1rem"><font color="red">* First contributor. Author names alphabetically</font></p>
+        <p style="margin: 0; padding-left: 1rem"><font color="red">Author names alphabetically</font></p>
         <p style="margin: 0; padding-left: 1rem">East China Normal University, The Chinese University of Hong Kong</p>
         <i style="font-size: 0.6rem; padding-left: 1rem">IEEE Transactions on Neural Networks and Learning Systems (<font color="red"><b>TNNLS, Top Journal</b></font>).</i> </br>
         <i style="font-size: 0.6rem; padding-left: 1rem">This achievement was completed during the visit of the Chinese University of Hong Kong.</i> </br>
@@ -252,7 +253,7 @@ I will graduate in 2021.07.</br>
         <font color="blue">【SCI-1, IF=9.340】</font>
         </br>
         <p style="margin: 0; padding-left: 1rem">Faming Fang, <u><b>Juncheng Li*</b></u>, and Tieyong Zeng</p>
-        <p style="margin: 0; padding-left: 1rem"><font color="red">* First contributor. Author names alphabetically</font></p>
+        <p style="margin: 0; padding-left: 1rem"><font color="red">Author names alphabetically</font></p>
         <p style="margin: 0; padding-left: 1rem">East China Normal University, The Chinese University of Hong Kong</p>
         <i style="font-size: 0.6rem; padding-left: 1rem">IEEE Transactions on Image Processing (<font color="red"><b>TIP, Top Journal</b></font>), 2020.</i> </br>
         <i style="font-size: 0.6rem; padding-left: 1rem">This achievement was completed during the visit of the Chinese University of Hong Kong.</i> </br>
@@ -441,6 +442,40 @@ I will graduate in 2021.07.</br>
     </li>
     <li>
         British Machine Vision Conference (BMVC)
+    </li>
+</section>
+
+
+<p></p>
+
+<section style="font-size: 0.6rem;">
+    <h1 style="font-size: 1rem; font-weight: bold;">Attended Conference</h1>
+    <li>
+        The 18th Annual Meeting of the Chinese Society of Industrial and Applied Mathematics (CSIAM), Changsha, China.
+    </li>
+    <li>
+        Chinese Conference on Pattern Recognition and Computer Vision (PRCV), Nanjing, China.
+    </li>
+    <li>
+        Workshop on Image Processing: Technology and Theory, 2019, Shanghai, China.
+    </li>
+    <li>
+        IEEE International Conference on Computer Vision (ICCV), 2019, Seoul, Korea.
+    </li>
+    <li>
+        Vision And Learning SEminar (VALSE), 2019, Hefei, China.
+    </li>
+    <li>
+        European Conference on Computer Vision (ECCV), 2018, Munich Germany.
+    </li>
+    <li>
+        Workshop of Future Leaders of AI, 2017, Shanghai, China.
+    </li>
+    <li>
+        National Natural Science Foundation of China Mathematics Tianyuan Foundation Special Workshop, 2017, Hangzhou, China.
+    </li>
+    <li>
+        Vision And Learning SEminar (VALSE), 2017, Xiamen, China.
     </li>
 </section>
 
