--- a/index.html
+++ b/index.html
@@ -145,10 +145,13 @@ I will graduate in 2021.07.</br>
 <section style="font-size: 0.6rem;">
     <h1 style="font-size: 1rem; font-weight: bold;">Awards</h1>
     <li>
-        Wisdom Scholarship of East China Normal University, 2020. 
+        华东师范大学 “优秀学生”称号, 2020. 
     </li>
     <li>
-        Doctoral Research and Innovation Funding of East China Normal University, 2020.
+        华东师范大学 “智慧奖学金”, 2020. 
+    </li>
+    <li>
+        华东师范大学计算机科学与技术学院 “博士生科研创新基金”, 2020.
     </li>
     <li>
         ICCV Travel Award, 2019.
