--- a/index.html
+++ b/index.html
@@ -163,10 +163,10 @@ I will graduate in 2021.07.</br>
         Second place in <a href="http://www.vision.ee.ethz.ch/aim19/", target="_blank">"Example-based RAW to RGB Mapping Challenge, Track 1: Fidelity. (ICCV-AIM 2019)"</a>.
     </li>
     <li>
-        Fourth place and "Geek Award" in <a href="https://tianchi.aliyun.com/competition/entrance/231711/introduction", target="_blank">"YouKu Video Super-resolution and Enhancement Challenge 2019"</a> (4/1514).
+        <a href="https://tianchi.aliyun.com/competition/entrance/231711/introduction", target="_blank">阿里巴巴优酷视频增强和超分辨率挑战赛</a> 全国第四名 及 “极客奖”(4/1514).
     </li>
     <li>
-        Top 30 Most Potential Developers prize in 《2018 Computer Vision Most Potential Developers List》.
+        2018计算机视觉最具潜力开发者榜单-全国最具潜力开发者30强.
     </li>
     <li>
         Third place in <a href="https://github.com/rwenqi/ChinaMM18dehazing/blob/master/index.md", target="_blank">"ChinaMM 2018 Image Dehazing Challenge"</a>.
