--- a/index.html
+++ b/index.html
@@ -145,13 +145,13 @@ I will graduate in 2021.07.</br>
 <section style="font-size: 0.6rem;">
     <h1 style="font-size: 1rem; font-weight: bold;">Awards</h1>
     <li>
-        华东师范大学 “优秀学生”称号, 2020. 
+        华东师范大学 “优秀学生”称号, 2020。
     </li>
     <li>
-        华东师范大学 “智慧奖学金”, 2020. 
+        华东师范大学 “智慧奖学金”, 2020。
     </li>
     <li>
-        华东师范大学计算机科学与技术学院 “博士生科研创新基金”, 2020.
+        华东师范大学计算机科学与技术学院 “博士生科研创新基金”, 2020。
     </li>
     <li>
         ICCV Travel Award, 2019.
@@ -163,13 +163,13 @@ I will graduate in 2021.07.</br>
         Second place in <a href="http://www.vision.ee.ethz.ch/aim19/", target="_blank">"Example-based RAW to RGB Mapping Challenge, Track 1: Fidelity. (ICCV-AIM 2019)"</a>.
     </li>
     <li>
-        <a href="https://tianchi.aliyun.com/competition/entrance/231711/introduction", target="_blank">阿里巴巴优酷视频增强和超分辨率挑战赛</a> 全国第四名 及 “极客奖”(4/1514).
+        阿里巴巴-<a href="https://tianchi.aliyun.com/competition/entrance/231711/introduction", target="_blank">“优酷视频增强和超分辨率挑战赛”</a> 全国第四名 及 “极客奖” (4/1514)。
     </li>
     <li>
         2018计算机视觉最具潜力开发者榜单-全国最具潜力开发者30强.
     </li>
     <li>
-        Third place in <a href="https://github.com/rwenqi/ChinaMM18dehazing/blob/master/index.md", target="_blank">"ChinaMM 2018 Image Dehazing Challenge"</a>.
+        2018年中国多媒体大会（ChinaMM-<a href="https://github.com/rwenqi/ChinaMM18dehazing/blob/master/index.md", target="_blank">"图像去雾挑战赛"</a> 全国第三名 （二等奖）。
     </li>
     <li>
         Sixth place and awarded "Honorable Mention Award" in <a href="http://www.vision.ee.ethz.ch/ntire18/", target="_blank">"NTIRE 2018 Challenge on Image Dehazing"</a>.
