--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@ I will graduate in 2021.07.</br>
         2018计算机视觉最具潜力开发者榜单-全国最具潜力开发者30强.
     </li>
     <li>
-        2018年中国多媒体大会（ChinaMM-<a href="https://github.com/rwenqi/ChinaMM18dehazing/blob/master/index.md", target="_blank">"图像去雾挑战赛"</a> 全国第三名 （二等奖）。
+        2018年中国多媒体大会（ChinaMM）-<a href="https://github.com/rwenqi/ChinaMM18dehazing/blob/master/index.md", target="_blank">"图像去雾挑战赛"</a> 全国第三名 （二等奖）。
     </li>
     <li>
         Sixth place and awarded "Honorable Mention Award" in <a href="http://www.vision.ee.ethz.ch/ntire18/", target="_blank">"NTIRE 2018 Challenge on Image Dehazing"</a>.
