--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@ I will graduate in 2021.07.</br>
         Sixth place and awarded "Honorable Mention Award" in <a href="http://www.vision.ee.ethz.ch/ntire18/", target="_blank">"NTIRE 2018 Challenge on Image Dehazing"</a>.
     </li>
     <li>
-        24 place in "JData algorithm competition" (Construction of the prediction model for the purchase intention of high potential users, 24/4240).
+        京东算法挑战赛-“潜在购买用户预测”全国第24名（24/4240）.
     </li>
 </section>
 
