--- a/index.html
+++ b/index.html
@@ -396,6 +396,9 @@ I will graduate in 2021.07.</br>
     <h1 style="font-size: 1rem; font-weight: bold;">Academic Service</h1>
     <h1 style="font-size: 0.8rem; font-weight: bold;">Journal Reviewer</h1>
     <li>
+        Information Science (INS, SCI-1)
+    </li>
+    <li>
         IEEE Transactions on Image Processing (TIP, SCI-1)
     </li>
     <li>
