--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@ I will graduate in 2021.07.</br>
 
 <p style="margin: 0; padding-left: 1rem"><font color="red">Accepted: 6 (Journal) + 3 (Conference) + 2 (Workshop) + 2 (Report)</font></p>
 <p style="margin: 0; padding-left: 1rem"><font color="red">Under review: 4 (Journal) + 3 (Conference)</font></p>
-<p style="margin: 0; padding-left: 1rem"><font color="red">Total IF: 34.066 &nbsp; Total citations: 249 &nbsp; Highest citation paper: 138</font></p>
+<p style="margin: 0; padding-left: 1rem"><font color="red">Total IF: 34.066 &nbsp; Total citations: 255 &nbsp; Highest citation paper: 143</font></p>
 <p style="margin: 0; padding-left: 1rem"><font color="red">* First contributor</font></p>  
 </br>
 
@@ -396,13 +396,16 @@ I will graduate in 2021.07.</br>
     <h1 style="font-size: 1rem; font-weight: bold;">Academic Service</h1>
     <h1 style="font-size: 0.8rem; font-weight: bold;">Journal Reviewer</h1>
     <li>
-        Information Science (INS, SCI-1)
-    </li>
-    <li>
         IEEE Transactions on Image Processing (TIP, SCI-1)
     </li>
     <li>
         IEEE Transactions on Multimedia (TMM, SCI-1)
+    </li>
+    <li>
+        Knowledge-Based Systems (KBS, SCI-1)
+    </li>
+    <li>
+        Information Science (INS, SCI-1)
     </li>
     <li>
         IEEE Access (SCI-2)
