--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 				</p>
 			</td>
 			<td>
-				<img src="./pic/JunchengLi.png" border="0" width="180"><br>
+				<img src="./pic/JunchengLi.jpeg" border="0" width="180"><br>
 			</td>
 		</tr><tr>
 	</tr></tbody>
