--- a/index.html
+++ b/index.html
@@ -311,16 +311,15 @@
 <div id="footer">
 	<div id="footer-text"></div>
 </div>
-	<p><center>
-      	<div id="clustrmaps-widget" style="width:10%">
-     
-      		<script type="text/javascript" id="clstr_globe" src="//cdn.clustrmaps.com/globe.js?d=Z7MMe2OLPIh0o350wTkyrisUCV4KxhV4J1xgxMwnWqM"></script>
-      		<noscript><a href='https://clustrmaps.com/site/xfn5'  title='Visit tracker'><img src='//clustrmaps.com/map_v2.png?cl=ffffff&w=a&t=tt&d=pT8r_ZMBBdBPTv7KnlTCiBDylmHyi1qsWdPpY_tIlqY'/></a></noscript>
-
-	</div>        
+	<p>
+	<center>
+		<div>
+			<script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=300&t=tt&d=lSzpjw-jyYmDQRUSrVJGAFZBVU3oVwp87NxUFm1Zt_w'></script>
+		</div>     
 	<br>
         &copy; Juncheng Li | Last updated: 2020-11-24
-      </center></p>
+	</center>
+	</p>
 
 
 </div>
