--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 		<td> <a href="paper/TTP_2020.pdf" target="_blank">Soft-edge Assisted Network for Single Image Super-Resolution</a><br>
 		Faming Fang, <b>Juncheng Li*</b>, and Tieyong Zeng.
 		<p><em>IEEE Transactions on Image Processing</em> (<i><b>IEEE TIP</b></i>), 2020. <br>
-		<font color="red">#First contributor, Author names alphabetically.</font><br> 
+		<font color="red">*First contributor, Author names alphabetically.</font><br> 
 		<font color="red">This achievement was completed during the visit of the Chinese University of Hong Kong.</font><br> 
         <a href="paper/TTP_2020.pdf", target="_blank">[Paper]</a>
 		<a href="https://github.com/MIVRC/SeaNet-PyTorch", target="_blank">[Code]</a>
@@ -154,7 +154,7 @@
 		<td> <a href="paper/TNNLS_2020.pdf" target="_blank">Multi-level Edge Features Guided Network for Image Denoisingt</a><br>
 		Faming Fang, <b>Juncheng Li*</b>, Yiting Yuan, Tieyong Zeng, and Guixu Zhang.
 		<p><em>IEEE Transactions on Neural Networks and Learning Systems</em> (<i><b>IEEE TNNLS</b></i>), 2020. <br>
-		<font color="red">#First contributor, Author names alphabetically.</font><br> 
+		<font color="red">*First contributor, Author names alphabetically.</font><br> 
 		<font color="red">This achievement was completed during the visit of the Chinese University of Hong Kong.</font><br> 
         <a href="paper/TNNLS_2020.pdf", target="_blank">[Paper]</a>
 		<a href="https://github.com/MIVRC/MLEFGN-PyTorch", target="_blank">[Code]</a>
