--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 		<tr><td> The 1st place in <a href="http://www.vision.ee.ethz.ch/aim19/", target="_blank">"Example-based RAW to RGB Mapping Challenge"</a>, Track 2: Perceptual. <b>(ICCV-AIM)</b>, 2019.</td></tr>
 		<tr><td> The 2nd place in <a href="http://www.vision.ee.ethz.ch/aim19/", target="_blank">"Example-based RAW to RGB Mapping Challenge"</a>, Track 1: Fidelity. <b>(ICCV-AIM)</b>, 2019.</td></tr>
 		<tr><td> 阿里巴巴 - <a href="https://tianchi.aliyun.com/competition/entrance/231711/introduction", target="_blank">"优酷视频增强和超分辨率挑战赛"</a> 全国第四名 及 "极客奖" <b>(4/1514)</b>, 2019.</td></tr>
-		<tr><td> 2018年中国多媒体大会（ChinaMM）- <a href="https://github.com/rwenqi/ChinaMM18dehazing/blob/master/index.md", target="_blank">"图像去雾挑战赛"</a> <b>全国第三名</b>, 2018.</td></tr>
+		<tr><td> 2018年中国多媒体大会（ChinaMM）- <a href="https://github.com/rwenqi/ChinaMM18dehazing/blob/master/index.md", target="_blank">"图像去雾挑战赛"</a> 全国第三名, 2018.</td></tr>
 		<tr><td> The 6th place and "Honorable Mention Award" in <a href="http://www.vision.ee.ethz.ch/ntire18/", target="_blank">"Image Dehazing Challenge".</a> <b>(CVPR-NTIRE)</b>, 2018.</td></tr>
 		<tr><td> 京东算法挑战赛 - "潜在购买用户预测"全国第24名 <b>(24/4240)</b>, 2017.</td></tr>
 		<tr><td>中国 "明德奖学金", 2015.</td></tr> 
