--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 
 
 
-<h2>Selected Publications [<a href="https://scholar.google.com.hk/citations?user=a5jkbmkAAAAJ&hl=zh-CN">Google Scholar</a>]</h2>
+<h2>Selected Publications [<a href="https://scholar.google.com.hk/citations?user=a5jkbmkAAAAJ&hl=zh-CN">Google Scholar</a>][Citations: 255]</h2>
 <table id="tbPublications" width="100%">
 	<tbody>
     <tr>	
