--- a/index.html
+++ b/index.html
@@ -132,12 +132,12 @@
 		<td width="206">
 		<img src="./indexpics/SeaNet.png" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
 		</td>		
-		<td> <a href="paper/TTP_2020.pdf" target="_blank">Soft-edge Assisted Network for Single Image Super-Resolution</a><br>
+		<td> <a href="paper/TIP_2020.pdf" target="_blank">Soft-edge Assisted Network for Single Image Super-Resolution</a><br>
 		Faming Fang, <b>Juncheng Li*</b>, and Tieyong Zeng.
 		<p><em>IEEE Transactions on Image Processing</em> (<i><b>IEEE TIP</b></i>), 2020. <br>
 		<font color="red">*First contributor, Author names alphabetically.</font><br> 
 		<font color="red">This achievement was completed during the visit of the Chinese University of Hong Kong.</font><br> 
-        <a href="paper/TTP_2020.pdf", target="_blank">[Paper]</a>
+        <a href="paper/TIP_2020.pdf", target="_blank">[Paper]</a>
 		<a href="https://github.com/MIVRC/SeaNet-PyTorch", target="_blank">[Code]</a>
 		<a href="https://junchenglee.com/projects/TIP2020_SEANET", target="_blank">[Homepage]</a>
 		</td>
