--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 					       
 				</p>
 				<p> 
-					<a href="https://github.com/CV-JunchengLi"><img src="./pic/cv_s.png" height="30px" style="margin-bottom:-3px"></a>
+					<!-- <a href="https://github.com/CV-JunchengLi"><img src="./pic/cv_s.png" height="30px" style="margin-bottom:-3px"></a> -->
 					<a href="https://scholar.google.com.hk/citations?user=a5jkbmkAAAAJ&hl=zh-CN"><img src="./pic/google_scholar.png" height="30px" style="margin-bottom:-3px"></a>
 					<a href="https://github.com/CV-JunchengLi"><img src="./pic/github_s.jpg" height="30px" style="margin-bottom:-3px"></a>
 				</p>
@@ -66,25 +66,33 @@
 
 
 <h2>Honors &amp; Awards</h2>
+
+<h3>2016-Now (Graduate Period)</h3>
 <table style="border-spacing:2px">
-	
-		<tbody>
-		<tr><td>华东师范大学 "优秀学生"称号, 2020.</td></tr> 	
-		<tr><td>华东师范大学 "智慧奖学金", 2020.</td></tr> 	
-		<tr><td>华东师范大学计算机科学与技术学院 "博士生科研创新基金项目", 2020.</td></tr> 	
-		<tr><td>华东师范大学 “学业奖学金”, 2016, 2017, 2018, 2019, 2020.</td></tr> 	
+	<tbody>
+		<tr><td>Outstanding Student, East China Normal University, 2020.</td></tr> 	
+		<tr><td>Wisdom Scholarship, East China Normal University, 2020. (1.5%)</td></tr> 	
+		<tr><td>Doctoral Research and Innovation Fund Project, East China Normal University, 2020.</td></tr> 	
+		<tr><td>Graduate Scholarship, East China Normal University, 2016-2020.</td></tr> 	
 		<tr><td>ICCV Travel Award, 2019.</td></tr> 	
 		<tr><td> The 1st place in <a href="http://www.vision.ee.ethz.ch/aim19/", target="_blank">"Example-based RAW to RGB Mapping Challenge"</a>, Track 2: Perceptual. <b>(ICCV-AIM)</b>, 2019.</td></tr>
 		<tr><td> The 2nd place in <a href="http://www.vision.ee.ethz.ch/aim19/", target="_blank">"Example-based RAW to RGB Mapping Challenge"</a>, Track 1: Fidelity. <b>(ICCV-AIM)</b>, 2019.</td></tr>
-		<tr><td> 阿里巴巴 - <a href="https://tianchi.aliyun.com/competition/entrance/231711/introduction", target="_blank">"优酷视频增强和超分辨率挑战赛"</a> 全国第四名 及 "极客奖" <b>(4/1514)</b>, 2019.</td></tr>
-		<tr><td> 2018年中国多媒体大会（ChinaMM）- <a href="https://github.com/rwenqi/ChinaMM18dehazing/blob/master/index.md", target="_blank">"图像去雾挑战赛"</a> 全国第三名, 2018.</td></tr>
+		<tr><td> The 4th place and "Geek Award" in Alibaba - <a href="https://tianchi.aliyun.com/competition/entrance/231711/introduction", target="_blank">"Youku Video Enhancement and Super Resolution Challenge"</a> <b>(4/1514)</b>, 2019.</td></tr>
+		<tr><td> The 3rd place in China Multimedia - <a href="https://github.com/rwenqi/ChinaMM18dehazing/blob/master/index.md", target="_blank">"Image Dehazing Challenge"</a>, <b>(ChinaMM)</b>, 2018.</td></tr>
 		<tr><td> The 6th place and "Honorable Mention Award" in <a href="http://www.vision.ee.ethz.ch/ntire18/", target="_blank">"Image Dehazing Challenge".</a> <b>(CVPR-NTIRE)</b>, 2018.</td></tr>
-		<tr><td> 京东算法挑战赛 - "潜在购买用户预测"全国第24名 <b>(24/4240)</b>, 2017.</td></tr>
-		<tr><td>中国 "明德奖学金", 2015.</td></tr> 
-		<tr><td>中国大学生计算机设计大赛全国二等奖, 2014, 2015.</td></tr> 
-		<tr><td>江西师范大学 "优秀毕业生"称号, 2015.</td></tr> 
-		<tr><td>江西师范大学 "三好学生", "优秀学生"称号, 2012, 2013, 2014, 2015.</td></tr> 
-		<tr><td>江西师范大学 "一等学业奖学金", 2012, 2013, 2014, 2015.</td></tr> 
+		<tr><td>Ranked 24th in Jingdong Algorithm Challenge - "Potential User Prediction" <b>(24/4240)</b>, 2017.</td></tr>
+	</tbody>
+</table>
+
+<h3>2012-2016 (Undergraduate Period)</h3></tbody>
+<table style="border-spacing:2px">
+	<tbody>
+		<tr><td>Mingde Scholarship, China, 2015. (3%)</td></tr> 
+		<tr><td>Second Award in National Computer Design Contest, Chian, 2014, 2015.</td></tr> 
+		<tr><td>Outstanding Graduates, Jiangxi Normal University, 2016.</td></tr> 
+		<tr><td>Merit Student, Jiangxi Normal University, 2013-2016.</td></tr>
+		<tr><td>Outstanding Student, Jiangxi Normal University, 2013-2016.</td></tr> 
+		<tr><td>First-class Student Scholarship, Jiangxi Normal University, 2013-2016</td></tr> 
 	</tbody>
 </table>
 
@@ -96,19 +104,19 @@
 		<div style="float:left; text-align:left">The Chinese University of Hong Kong, Hong Kong. </div> <div style="float:right; text-align:right">2019.08.16--2019.09.30</div><br>
 		Research Assistant<br>
 		Topic: Image Compression<br>
-		Supervisor: Prof. ZENG Tieyong (Director of CMAI)<br>
+		Supervisor: Prof. <a href="https://scholar.google.com.hk/citations?user=2yyTgRwAAAAJ&hl=zh-CN">ZENG Tieyong</a> (Director of <a href="http://cmai.math.cuhk.edu.hk/index.html">CMAI</a>)<br>
 	</li>
 	<li>
 		<div style="float:left; text-align:left">The Chinese University of Hong Kong, Hong Kong. </div> <div style="float:right; text-align:right">2018.05.10--2018.09.10</div><br>
 		Research Assistant<br>
 		Topic: Image Restoration<br>
-		Supervisor: Prof. ZENG Tieyong (Director of CMAI)<br>
+		Supervisor: Prof. <a href="https://scholar.google.com.hk/citations?user=2yyTgRwAAAAJ&hl=zh-CN">ZENG Tieyong</a> (Director of <a href="http://cmai.math.cuhk.edu.hk/index.html">CMAI</a>)<br>
 	</li>
 </ul>
 
 
 
-<h2>Selected Publications [<a href="https://scholar.google.com.hk/citations?user=a5jkbmkAAAAJ&hl=zh-CN">Google Scholar</a>][Citations: 255]</h2>
+<h2>Selected Publications [Citations: 255] [Highest Citation: 143]</h2>
 <table id="tbPublications" width="100%">
 	<tbody>
     <tr>	
@@ -136,7 +144,7 @@
 		Faming Fang, <b>Juncheng Li*</b>, and Tieyong Zeng.
 		<p><em>IEEE Transactions on Image Processing</em> (<i><b>IEEE TIP</b></i>), 2020. <br>
 		<font color="red">*First contributor, Author names alphabetically.</font><br> 
-		<font color="red">This achievement was completed during the visit of the Chinese University of Hong Kong.</font><br> 
+		<font color="red">This achievement was completed during the visit of the Chinese University of Hong Kong (CUHK).</font><br> 
         <a href="paper/TIP_2020.pdf", target="_blank">[Paper]</a>
 		<a href="https://github.com/MIVRC/SeaNet-PyTorch", target="_blank">[Code]</a>
 		<a href="https://junchenglee.com/projects/TIP2020_SEANET", target="_blank">[Homepage]</a>
@@ -155,7 +163,7 @@
 		Faming Fang, <b>Juncheng Li*</b>, Yiting Yuan, Tieyong Zeng, and Guixu Zhang.
 		<p><em>IEEE Transactions on Neural Networks and Learning Systems</em> (<i><b>IEEE TNNLS</b></i>), 2020. <br>
 		<font color="red">*First contributor, Author names alphabetically.</font><br> 
-		<font color="red">This achievement was completed during the visit of the Chinese University of Hong Kong.</font><br> 
+		<font color="red">This achievement was completed during the visit of the Chinese University of Hong Kong (CUHK).</font><br> 
         <a href="paper/TNNLS_2020.pdf", target="_blank">[Paper]</a>
 		<a href="https://github.com/MIVRC/MLEFGN-PyTorch", target="_blank">[Code]</a>
 		<a href="https://junchenglee.com/projects/TNNLS2020_MLEFGN", target="_blank">[Homepage]</a>
@@ -171,7 +179,7 @@
 		<img src="./indexpics/LPNet.png" width="185px" height = "95" style="box-shadow: 4px 4px 8px #888">
 		</td>		
 		<td> <a href="paper/TMM_2020.pdf" target="_blank">Luminance-aware Pyramid Network for Low-light Image Enhancement</a><br>
-		Jiaqian Li#, <b>Juncheng Li#</b>, Xiaowei Hu, Faming Fang, Fang Li, and Guixu Zhang.
+		Jiaqian Li#, <b>Juncheng Li#</b>, Faming Fang, Fang Li, and Guixu Zhang.
 		<p><em>IEEE Transactions on Multimedia</em> (<i><b>IEEE TMM</b></i>), 2020. <br>
 		<font color="red">#Equal Contribution</font><br> 
 		<a href="paper/TMM_2020.pdf", target="_blank">[Paper]</a>
@@ -301,7 +309,10 @@
 			<td> Member of the Computer Vision Foundation (CVF)</td>
 		</tr>
 		<tr>
-			<td> Founder of CLF Studio 【丛林蜂工作室】</td>
+			<td> Founder of CLF Studio 【A non-profit student innovation studio】</td>
+		</tr>
+		<tr>
+			<td> Founder of <a href="https://github.com/MIVRC", target="_blank">MIVRC</a> 【A non-profit image processing laboratory affiliated with CLF-AI】</td>
 		</tr>
 	</tbody>
 </table>
