--- a/index.html
+++ b/index.html
@@ -116,7 +116,8 @@
 
 
 
-<h2>Selected Publications [Citations: 255] [Highest Citation: 143]</h2>
+<h2>Selected Publications </h2>
+<h3>[Total Citations: 255] [Highest Citation: 143] [Total IF: 34.066] [Accepted: 13]</h3>
 <table id="tbPublications" width="100%">
 	<tbody>
     <tr>	
