--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
 		<td> <a href="paper/ECCV_2018.pdf" target="_blank">Multi-scale Residual Network for Image Super-Resolution</a><br>
 		<b>Juncheng Li</b>, Faming Fang, Kangfu Mei, and Guixu Zhang.
 		<p><em>European Conference on Computer Vision</em> (<i><b>ECCV</b></i>), 2018.<br>
-		<font color="red">The most popular paper. 204 stars and 46 forks in Github.</font><br>
+		<font color="red">The most popular paper. 206 stars and 46 forks in Github.</font><br>
 		<a href="paper/ECCV_2018.pdf", target="_blank">[Paper]</a>
         <a href="poster/MSRN-poster.pdf", target="_blank">[Poster]</a>
 		<a href="https://github.com/MIVRC/MSRN-PyTorch", target="_blank">[Code]</a>
@@ -265,7 +265,7 @@
 
 
 
-<h2>Academic Service</h2>
+<h2>Academic Services</h2>
 
 <h3>Reviewer</h3>
 <table id="tbTeaching" border="0" width="100%">
